# flexio

./: README.md  pyproject.toml
src/flexio/: __init__.py  flexio.py
tests/: conftest.py  initial content  test_flexio.py
